--- a/style.css
+++ b/style.css
@@ -53,14 +53,15 @@
       }
 
       #footer{
-          text-align: center;
-          margin-top: 25px;
-          margin-bottom: 25px;
+        text-align: center;
+        margin-top: 25px;
+        margin-bottom: 25px;
       }
 
       #Minecraft{
-          margin-top: 100px;
+        margin-top: 100px;
       }
+
       #Minecraft h1{
         font-size: 75px;
         margin-bottom: 20px;
@@ -85,4 +86,13 @@
 
       .style1{
         background-color: #E2EFD9;
+      }
+
+      #free-fire{
+        margin-top: 100px;
+      }
+      
+      #free-fire h1{
+        font-size: 75px;
+        margin-bottom: 20px;
       }
