--- a/style.css
+++ b/style.css
@@ -100,3 +100,11 @@
       #free-fire p{
         font-size: 20px;
       }
+
+      .list{
+        font-size: 20px;
+      }
+
+      .text-style{
+        color: blue;
+      }
