--- a/style.css
+++ b/style.css
@@ -6,13 +6,17 @@
 
       #name{
         font-size: 20px;
-        margin: 10px;
+        margin: 10px 0px 10px 10px;
         float: left;
       }
 
       .nav-link{
         font-size: 20px;
         margin: 5px 20px;
+      }
+
+      #display{
+        display: block;
       }
 
       .nav{
@@ -107,4 +111,76 @@
 
       .text-style{
         color: blue;
+      }
+
+      .container2 {
+        display: inline-block;
+        cursor: pointer;
+        display:none;
+        margin-top: 14px;
+      }
+      
+      .bar1, .bar2, .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: #333;
+        margin: 6px 0;
+        transition: 0.4s;
+      }
+      
+      .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-8px, 8px);
+        transform: rotate(-45deg) translate(-8px, 8px);
+      }
+      
+      .change .bar2 {opacity: 0;}
+      
+      .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
+      }
+
+      #toggleitem{
+        float: left;
+        margin-top: 23px;
+        font-size: 20px;
+        display: none;
+        background-color: #F7F7F9;
+        width: 100%;
+
+      }
+
+      .nav-item-link{
+        text-decoration: none;
+        color: #0275DC;
+        padding: 5px 10px;
+        margin: 0px;
+        width: 100%;
+        float: left;
+        text-align: center;
+      }
+
+      .nav-item-link:hover{
+        text-decoration: none;
+        color: #0275DC;
+      }
+
+      @media (max-width: 940px) {
+        .container2 {
+          display:block;
+        }
+
+        #display {
+          display:none;
+        }
+
+        #home{
+          clear: both;
+        }
+      }
+
+      @media (max-width: 425px) {
+        #name {
+          display: none;
+        }
       }
